enh: use ComputedValue for async history grouping headers
*   Refactor `HistoryGrouping` to return `ComputedValue` for group labels instead of blocking on the EDT.
*   Update `HistoryCellRenderer` and `HistoryOutputPanel` to handle and subscribe to asynchronous label updates.
*   Remove manual timeouts in label computation in favor of a non-blocking aggregate future approach.